# peptonebench

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
datasets/: downloadDBs.sh
datasets/PeptoneDB-CS/: PeptoneDB-CS.csv
datasets/PeptoneDB-Integrative/: PeptoneDB-Integrative.csv
datasets/PeptoneDB-SAXS/: PeptoneDB-SAXS.csv
forward-models/: Dockerfile  README.md  cspred_wrapper.py  env.yaml  pepsi_wrapper.py  postprocess_nmr.py  postprocess_saxs.py  run_forward_model.py  utils.py
integrativeanalysis/: Dockerfile  addhydrogens.py  calcRDCs_pdbsfolder.py  calc_PRE.py  env.yaml
integrativeanalysis/notebooks/: analyse_IntegrativeDB_SAXS.ipynb
notebooks/: analyse_IntegrativeDB_SAXS.ipynb  benchmark_figures.ipynb  create_dataset_CS.ipynb  create_dataset_Integrative.ipynb  create_dataset_SAXS.ipynb  figure_idp-o.ipynb  figure_observables.ipynb
src/peptonebench/: config.py  constants.py  filter_unphysical_samples.py  filter_unphysical_traj.py  nmrcs.py  plotting.py  reweighting.py  saxs.py  trizod_gscores.py
src/peptonebench/script/: benchmark_cs.py  run_benchmark.py
src/peptonebench/scripts/: run_benchmark.py
