[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peptonebench"
version = "0.1.0"
description = "Benchmarking protein ensembles across the order-disorder continuum"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
PeptoneBench = "peptonebench.scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
